# local-ai-gemma

./: .gitignore  IMPLEMENTER1.md  LESSONS.md  MEDIUM.md  README.md  opencode.jsonc  pyproject.toml
.codex/skills/opencode-telemetry/: SKILL.md
.codex/skills/opencode-telemetry/scripts/: collect_telemetry.py
.opencode/agents/: implementer.md  implementer1.md  implementer1a.md  implementer2.md  orchestrator1.md  orchestrator2.md
.opencode/command/: phase.md
docs/: lesson-11-opencode-debug.md
specs/: mission.md  roadmap.md  tech-stack.md
