[project]
name = "local-ai-gemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard]==0.115.10",
    "jinja2==3.1.6",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]
